point out procedure more